resources/midas.css
/*----------------------------------------------------------
   CSS formatting for midas web pages
   this css does not contaminate generic html formatting
-----------------------------------------------------------*/

/* required global settings */

body.mcss {
   margin: 0;     /* navigation bar matches window edges */
   height: 100%;  /* for the floating footer */
}

html.mcss {
   height: 100%;  /* for the floating footer */
}

/* standard link colors and decorations */
a:link { color:#0000FF; text-decoration:none }
a:visited { color:#800080; text-decoration:none }
a:hover { color:#0000FF; text-decoration:underline }
a:active { color:#0000FF; text-decoration:underline }
a:focus { color:#0000FF; text-decoration:underline }

/* common settings: fonts, colors, etc */

.mfont, .mnav, .mbutton, .mtable, .mmaintable {
   font-family: verdana,tahoma,sans-serif;
}

.mgraycolor {
   background-color: #A0A0A0;
   border-radius: 5px;
   border: 1px solid #808080;
   color: #404040;
}

.mgraycolor a:link,a:visited {
   color: #404040;
   text-decoration: none;
}

.mredcolor {
   background-color: #a53529;
   border-radius: 5px;
   border: 1px solid #808080;
   color: #EEEEEE;
}

.mredcolor a:link,a:visited {
   color: #EEEEEE;
   text-decoration: none;
}

.myellowcolor {
   background-color: #f1c40f;
   border-radius: 5px;
   border: 1px solid #808080;
}

.mgreencolor {
   background-color: #00c000;
   border-radius: 5px;
   border: 1px solid #808080;
}

.mgreencolor a:link,a:visited {
   color: #EEEEEE;
   text-decoration: none;
}

/* mnav*css is the navigation bar with the "status", "odb", etc buttons */

#mheader {
   position: fixed;
   top: 0;
   left: 0;
   z-index: 1;
   width: 100%;
   background-color: #D0D0D0;
   border-bottom: 1px solid #A0A0A0;
   color: #404040;
   font-family: verdana,tahoma,sans-serif;
   font-size: 100%;
   text-align: center;
   padding: 5px;
   padding-left: 0;
   display: block;
   line-height: 1;
   /* total height = 19+1+2*5 = 30 */
}

#mheader_error {
   position: fixed;
   top: 0;
   left: 0;
   z-index: 0;
   width: 100%;
   background-color: red;
   color: white;
   font-family: verdana,tahoma,sans-serif;
   font-size: 100%;
   text-align: center;
   padding: 5px;
   padding-left: 0;
   display: block;
   line-height: 1;
}

#mheader_message {
   display: inline-block;
   color: black;
   background-color: lightgreen;
   border: 1px solid green;
   border-radius: 10px;
   padding-bottom: 1px;
   padding-left: 10px;
   padding-right: 10px;
}

#mheader_alarm {
   display: inline-block;
   margin-right: 20px;
   border-radius: 10px;
   padding-bottom: 1px;
   padding-left: 10px;
   padding-right: 10px;
}

#msidenav {
   height:100%;
   position:fixed;
   top: 30px; /* nomal header height */
   z-index: 1;
   left: 0;
   overflow-x: hidden;
   background-color: #D0D0D0;
   color: #404040;
   font-family: verdana,tahoma,sans-serif;
   font-size: 100%;
   padding: 0;
   transition: 0.2s;
}

.mmenuitem {
   padding: 5px;
   text-align:left;
   line-height: 1;
}

.mmenuitem:hover, .mmenuitem:focus {
   background-color: #808080;
   color: #404040;
   cursor: pointer;
}

.mmenulink:hover, .mmenulink:focus {
   text-decoration: none;
   width: 100%;
   display: inline-block;
}

.mmenulink:link, .mmenulink:visited {
   text-decoration: none;
   color: #404040;
   width: 100%;
   display: inline-block;
}

.mmenuitemsel {
   background-color: #A0A0A0;
}

.mseparator {
   height: 2px;
   background-color: #A0A0A0;
}

#mmain {
   display: none;
   position: relative;
   z-index: 0;
   padding-top: 30px; /* normal header height */
}

.mnav {
   background: linear-gradient(to bottom, #e9e9e9 0%,#b7b7b7 100%);
}

.mnav table{
   margin-left: auto;
   margin-right: auto;
}

.mnav td{
   border: 0;
   height: 34px;
}

.mnav input{
   padding: 0.25em;
   padding-left: 0.5em;
   padding-right: 0.5em;
}

.mmsgService{
	background-color: #C0C0C0;
	border-radius: 12px;
   padding: 1em;
}

a.hideButton{
    text-decoration : none; 
    color : #5F88A3;
}

span.modbarrow{
    text-decoration : none; 
    color : #000000;
    cursor: pointer;
}

span.modblink{
    color : #0000FF;
    cursor: pointer;
}

/* all navigation buttons */

input.mnav, .mbutton {
   border: 1px solid #808080;
   border-radius: 5px;
   color: #444444;
   background: linear-gradient(to bottom, #f5f5f5 0%,#c0c0c0 100%);
   font-size: 100%;
   margin: 2px;
}

/* selected navigation button */

input.mnavsel {
   color: #F8F8F8;
   background: linear-gradient(to bottom, #676767 0%,#999999 100%);
}

/* colors for hovered buttons */
input.mnav:hover, .mbutton:hover {
   color: #404040;
   background: linear-gradient(to bottom,  #ffffff 0%,#f3f3f3 50%,#ededed 51%,#ffffff 100%);
}

input.mnavsel:hover {
   color: #F8F8F8;
   background: linear-gradient(to bottom,  #404040 0%, #808080 100%);
}

/* input box */
input[type=text] {
   font-size: 100%;
}


.mloader {
  display: none;
  position: absolute;
  margin: auto;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1;
  opacity: 0.8;
  border: 16px solid #f3f3f3;
  border-radius: 50%;
  border-top: 16px solid #00B26B;
  width: 120px;
  height: 120px;
  -webkit-animation: mspin 1s linear infinite;
  animation: mspin 1s linear infinite;
}

@-webkit-keyframes mspin {
  0% { -webkit-transform: rotate(0deg); }
  100% { -webkit-transform: rotate(360deg); }
}

@keyframes mspin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}



/* table formatting */

.mtable {
   background-color: #FFFFFF;
   border: 2px solid #6bb28c;
   border-radius: 12px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 0.5em;
   margin-bottom: 0.5em;
   padding: 3px;
}

.mmessagebox {
   margin: 0;
   border: 2px solid #00B26B;
   border-radius: 12px;
   padding: 0;
   overflow: scroll;
   text-align: left;
}

.mmessagebox p:nth-child(odd){
   background-color: #DDDDDD;
}

.mmessagebox p:nth-child(even){
   background-color: #FFFFFF;
}

.mmessageline {
   font-family: Lucida Console, Fixed, Monospace;
   white-space: pre-wrap;
   line-height: 1.5em;
   margin: 0;
   padding-left: 10px;
   padding-right: 10px;
}

.mtable tr:nth-child(odd) {
   background-color: #DDDDDD;
}

.mtable tr:nth-child(even) {
   background-color: #EEEEEE;
}

.mtableheader {
   font-size: 120%;
   font-weight: bold;
   border-radius: 12px;
   background-color: #649dc3;
   color: #EEEEEE;
   margin: 0.1em;
   padding: 0.25em;
   text-align: center;
}

.mtabletitle {
   padding: 0.25em;
}


.mtitleCell{
    font-weight: bold;
}

.mmaintable {
   background-color: #F5F5F5;
   border: 2px solid #6bb28c;
   border-radius: 12px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 0.5em;
   margin-bottom: 0.5em;
   padding: 3px;
}

.clientsTable tr:nth-child(odd) td:nth-child(odd) {
    background-color: #DDDDDD;
}

.clientsTable tr:nth-child(odd) td:nth-child(even) {
    background-color: #FFFFFF;
}

.clientsTable tr:nth-child(even) td:nth-child(even) {
    background-color: #DDDDDD;
}

.clientsTable tr:nth-child(even) td:nth-child(odd) {
    background-color: #FFFFFF;
}

/* status page */

.statusDisabled {
   background-color: #B0B0B0;
}

.statusPartiallyDisabled {
   background: linear-gradient(45deg, #CCCCCC 25%, #B0B0B0 25%, #B0B0B0 50%, #CCCCCC 50%, #CCCCCC 75%, #B0B0B0 75%, #B0B0B0);
   background-size: 30px 30px;
}

/* ODB page */

.mODBtr:nth-child(odd) {
    background-color: #DDDDDD;
}

.mODBtr td{
    text-align: left;
    padding-left: 1em;
    padding-right: 1em;
}

.mkeyCellEditable{
    color: #0000FF;
}

.mnobordertable {
   background-color: #F5F5F5;
   margin-left: auto;
   margin-right: auto;
   margin-top: 0.5em;
   margin-bottom: 0.5em;
   padding: 3px;
}

.dlgPanel {
    background-color: #F0F0F0;
    text-align: center;
    padding: 10px;
    border-bottom-left-radius: 6px;
    border-bottom-right-radius: 6px;
}



/* end */

